<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CustomerActivity"
    android:background="#29d1d7">



    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/customer_page"
            android:id="@+id/requestLane"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="174dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.36">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_lane_button"
                android:id="@+id/requestLaneBtn"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="onRequestLaneHandler"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_out_button"
                android:id="@+id/checkout"
                android:onClick="onCheckoutHandler"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/historicScoresBtn"
                android:layout_alignStart="@+id/historicScoresBtn"
                android:layout_alignRight="@+id/historicScoresBtn"
                android:layout_alignEnd="@+id/historicScoresBtn"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/historic_scores"
                android:id="@+id/historicScoresBtn"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/requestLaneBtn"
                android:layout_alignStart="@+id/requestLaneBtn"
                android:layout_alignRight="@+id/requestLaneBtn"
                android:layout_alignEnd="@+id/requestLaneBtn"
                android:onClick="onShowScoreHandler"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
